# AMR_mandelbrot

./: .gitignore  CMakeLists.txt  README.md
cmake/: build_or_find_kokkos.cmake
src/: CMakeLists.txt  compute_mandelbrot_amr.cpp
src/io/: CMakeLists.txt  FileHandler.cpp  FileHandler.h  FileHandlerVtk.cpp  FileHandlerVtk.h  IO_VTK_shared.cpp  IO_VTK_shared.h  Point.h  VTKWriter.cpp  VTKWriter.h
src/shared/: amr_key.h  enums.h  morton_utils.h
